# OS_labs

./: CMakeLists.txt
lab1/: main.cpp
lab10/: main.cpp
lab12/: main.cpp
lab13/: main.cpp
lab15/: main.cpp
lab16/: list.cpp  list.h  main.cpp  makefile
lab17/: list.cpp  list.h  main.cpp
lab19/: list.cpp  list.h  main.cpp
lab2/: main.cpp
lab22/: detail_type.cpp  detail_type.h  main.cpp  myQueue.cpp
lab23/: main.cpp  myQueue.cpp  myQueue.h
lab24/: main.cpp  myQueue.cpp  myQueue.h
lab25/: Connection.h  Forwarder.cpp  Forwarder.h  main.cpp  tools.cpp  tools.h
lab3/: main.cpp
lab4/: main.cpp
lab5/: main.cpp
lab7/: main.cpp
